# cesoc_app

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
admin-web/: README.md  index.html  package-lock.json  package.json
admin-web/src/: App.jsx  api.js  styles.css
client/: __init__.py
client/app/: __init__.py  main.py
client/app/core/: __init__.py  config.py
client/app/printers/: __init__.py  windows_print_monitor.py
client/app/services/: __init__.py  api_client.py  app_launcher.py  session_store.py  workspace_service.py
client/app/session_tracker/: __init__.py  timer.py
client/app/ui/: __init__.py  main_window.py  resources.py
docs/: architecture.md  desktop-mvp.md  mvp-test.md
infra/postgres/: README.md
infra/scripts/: README.md  bootstrap.ps1  start-api.ps1
server/: __init__.py
server/alembic/: env.py
server/alembic/versions/: 20260424_rename_external_id_to_email.py
server/app/: __init__.py  main.py
server/app/core/: __init__.py  config.py  security.py  time.py
server/app/db/: __init__.py  base.py  init_db.py  session.py
server/app/jobs/: __init__.py
server/app/models/: __init__.py  print_credit.py  print_job.py  user.py  user_session.py  workstation.py
server/app/reports/: __init__.py
server/app/repositories/: __init__.py  print_credit_repository.py  print_repository.py  session_repository.py  user_repository.py  workstation_repository.py
server/app/schemas/: __init__.py  admin.py  auth.py  print_job.py  user.py  (+3 more)
shared/: __init__.py
shared/dto/: __init__.py
shared/utils/: __init__.py
(+20 files in other folders)
