[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cesoc-app"
version = "0.1.0"
description = "MVP CESOC pour gestion des postes informatiques clients"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    "PySide6>=6.8.0",
    "pywin32>=308; platform_system == 'Windows'",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.35",
    "uvicorn>=0.32.0",
]

[tool.uvicorn]
factory = false

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["server*", "client*", "shared*"]
